kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-api-deployment
  namespace: garion-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-api-deployment
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: final-api-deployment
    spec:
      containers:
        - name: final-api-deployment
          image: garioncox/garion-final-api:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
