kube/pvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: garion-final
  name: garion-final-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garion-final-db
  template:
    metadata:
      labels:
        app: garion-final-db
    spec:
      containers:
        - name: db
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: garion-final-db-pvc-2
        - name: init-sql
          configMap:
            name: garion-final-postgres-init
---
apiVersion: v1
kind: Service
metadata:
  namespace: garion-final
  name: garion-final-db-service
spec:
  type: ClusterIP
  selector:
    app: garion-final-db
  ports:
    - port: 5432
      targetPort: 5432
