kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-api-ingress
  namespace: garion-final
spec:
  rules:
  - host: garion-final.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: final-api-service
            port:
              number: 8080
